# huffman-edu

./: configure.ac
src/: .sorting.c.swp  Makefile.am
tests/: Makefile.am  check_sorting.c
tests/.deps/: check_sorting-check_sorting.Po
