dnl Process this file with autoconf to produce a configure script.
AC_INIT( [sorting], [0.1], [mfivecoa@purdue.edu] )

AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CC
AM_PATH_CHECK()
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_OUTPUT
